--- a/CSS/style.css
+++ b/CSS/style.css
@@ -400,6 +400,7 @@ footer :last-child {
   }
   #home_ultimos_eventos .sub_banner p {
     display: -webkit-box;
+    text-align: justify;
     -webkit-line-clamp: 8; /* Número máximo de líneas a mostrar */
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
