--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,22 +30,26 @@
 html {
   margin: 0;
   font-family: "Inika", serif;
-  /* width: 1200px; */
-  /* margin-left: calc(50vw - 600px); */
+  max-width: 1200px;
   /* background-image: url("/public/assets/imgs/pelota_evento_uno.jpg"); */
-  /* background-repeat: no-repeat;
+  background-repeat: no-repeat;
   background-size: cover;
-  background-position: calc(-50vw + 600px); */
+  background-position: calc(-50vw + 600px);
 }
-/* html::before{
+@media (min-width: 1200px) {
+  html {
+    margin-left: calc(50vw - 600px);
+  }
+}
+html::before {
   content: "";
   width: 100%;
   height: 100%;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   position: absolute;
   background-color: white;
-} */
+}
 h1,
 h2,
 h3,
@@ -60,6 +64,8 @@ h1 {
 }
 h2 {
   font-size: 26px;
+  text-align: left;
+  margin-left: 20px;
 }
 h3 {
   font-size: 22px;
@@ -178,6 +184,8 @@ footer :last-child {
 #home_ultimos_eventos h2 {
   background-color: #ededed;
   padding: 5px;
+  margin-left: -20px;
+  text-align: center;
 }
 #home_ultimos_eventos > p {
   text-align: justify;
@@ -253,12 +261,18 @@ footer :last-child {
 #home_blog > div {
   background-image: none;
 }
+.home_blog_texto {
+  margin: 0 20px 0 0;
+}
 #home_blog .banner {
   background-image: none;
 }
+#home_blog .banner:nth-child(1) {
+  font-size: 16px;
+}
 .home_blog_img {
   width: 50vw;
-  margin: 10px;
+  margin: 10px 10px 10px 20px;
   background-image: url("/public/assets/imgs/jugadora_padel.jpg");
   background-size: 250%;
   background-position: top center;
@@ -275,7 +289,7 @@ footer :last-child {
 .desktop_show {
   display: none;
 }
-.sub_banner .desktop_show{
+.sub_banner .desktop_show {
   display: none;
 }
 /* GLOBAL DESKTOP */
@@ -341,13 +355,13 @@ footer :last-child {
     content: "";
     top: 0;
     left: 0;
-    border: 3px solid black;
+    border: 4px solid black;
     width: 100%;
     height: 85%;
     position: absolute;
   }
   #boton_identificate img {
-    margin: 0 0 -4px 0;
+    margin: 0 0 -3px 0;
     height: 45px;
   }
   /* PORTADA */
@@ -553,21 +567,27 @@ footer :last-child {
   #home_blog .desktop_show {
     display: flex;
   }
-  .home_blog_img {
+  #home_blog .sub_banner_three {
     width: 50%;
+  }
+  .home_blog_img {
     margin: 0 20px;
   }
   .home_blog_texto {
     margin: 0 20px 0 0;
   }
-  footer img{
+  footer img {
     width: 100px;
   }
-  .footer_desktop{
+  .footer_desktop {
     display: flex;
     justify-content: space-around;
   }
-  .footer_desktop p{
+  .footer_desktop p {
     margin: 0;
+  }
+  #home_blog .banner:nth-child(2) .home_blog_img {
+    background-image: url("/public/assets/imgs/evento2blog.jpg");
+    background-size: cover;
   }
 }
