--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,7 +31,7 @@ html {
   margin: 0;
   font-family: "Inika", serif;
   max-width: 1200px;
-  /* background-image: url("/public/assets/imgs/pelota_evento_uno.jpg"); */
+  background-image: url("/public/assets/imgs/pelota_evento_uno.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: calc(-50vw + 600px);
@@ -45,10 +45,8 @@ html::before {
   content: "";
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
   position: absolute;
-  background-color: white;
+  background-color: rgba(255, 255, 255);
 }
 h1,
 h2,
