--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,17 +27,17 @@
   box-sizing: border-box;
   position: relative;
 }
-html {
+main, .footer_container {
   margin: 0;
   font-family: "Inika", serif;
   max-width: 1200px;
-  background-image: url("/public/assets/imgs/pelota_evento_uno.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: calc(-50vw + 600px);
+  /* background-image: url("/public/assets/imgs/pelota_evento_uno.jpg"); */
+  /* background-repeat: no-repeat;
+  background-size: cover; */
+  /* background-position: calc(-50vw + 600px); */
 }
 @media (min-width: 1200px) {
-  html {
+  main, .footer_container {
     margin-left: calc(50vw - 600px);
   }
 }
@@ -82,7 +82,7 @@ p {
   margin: 0 16px;
 }
 /* HEADER */
-header {
+.banner_verde {
   display: flex;
   height: 50px;
   background-color: #00ad6e;
@@ -92,7 +92,16 @@ header {
 .header_img {
   height: 50px;
 }
+header li {
+  font-family: "Kodchasan";
+}
+#desktop_menu {
+  display: flex;
+}
 /* FOOTER */
+footer{
+  margin: 0;
+}
 footer {
   background-color: #1d1d1b;
   color: white;
@@ -100,6 +109,7 @@ footer {
   font-size: 14px;
   display: flex;
   flex-direction: column;
+  margin: 0;
 }
 #links {
   margin: 16px;
@@ -119,8 +129,8 @@ footer :last-child {
   text-align: center;
   background-image: url("/public/assets/imgs/fondo_padel.jpg");
   background-size: cover;
+  background-position-y: 80%;
   background-repeat: no-repeat;
-  background-position: bottom;
 }
 #portada::before {
   position: absolute;
@@ -322,7 +332,7 @@ footer :last-child {
     margin: 20px;
   }
   /* HEADER */
-  header {
+  .banner_verde {
     min-height: 70px;
     justify-content: space-between;
     padding: 0 20px;
@@ -330,15 +340,14 @@ footer :last-child {
   .header_img {
     min-height: 70px;
   }
-  header img {
+  .banner_verde img {
     height: 35px;
   }
   #desktop_menu {
-    width: 75%;
     display: flex;
+    width: 75%;
     justify-content: right;
     gap: 25px;
-    align-items: center;
   }
   #desktop_menu button {
     min-width: 250px;
@@ -364,7 +373,7 @@ footer :last-child {
   }
   /* PORTADA */
   #portada {
-    min-height: 356px;
+    min-height: 400px;
     display: flex;
     align-items: end;
   }
@@ -420,7 +429,6 @@ footer :last-child {
   .banner_desktop {
     width: 120%;
     display: flex;
-    gap: 20px;
   }
   .banner_three {
     justify-content: right;
