--- a/CSS/style.css
+++ b/CSS/style.css
@@ -104,20 +104,27 @@ header li {
 header div {
   display: flex;
 }
+#menu_mobile:checked + .nav_mobile {
+  visibility: visible;
+}
+#menu_mobile:checked {
+  top: 30px;
+  left: calc(100% - 58px);
+  font-size: 25px;
+  display: flex;
+  position: fixed;
+}
 #menu_mobile {
   z-index: 2;
-  /* opacity: 0%; */
+  opacity: 0%;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 10px;
+  left: calc(86.5%);
   width: 28px;
   height: 28px;
   margin: 0;
   right: calc(16px);
   cursor: pointer;
-}
-#menu_mobile:checked + .nav_mobile {
-  visibility: visible;
 }
 .menu_mobile_icon {
   display: flex;
@@ -129,9 +136,30 @@ header div {
   width: 100%;
   min-height: 100vh;
   z-index: 1;
-  background-color: black;
-  color: white;
+  background-color: white;
   font-family: "Kodchasan";
+}
+.nav_mobile nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+  width: 100%;
+}
+.nav_mobile ul {
+  height: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  margin-top: calc(100vh / 10);
+}
+.nav_mobile ul li {
+  width: 100%;
+  font-size: 24px;
+  text-align: center;
+  margin: calc(100vh / 30) 0;
+  padding: calc(100vh / 30) 0;
+  background-color: #ededed;
 }
 .close {
   top: 30px;
@@ -141,6 +169,12 @@ header div {
   display: flex;
   justify-content: right;
   position: absolute;
+  z-index: 3;
+}
+@media (min-width: 738px) {
+  .nav_mobile {
+    display: none;
+  }
 }
 /* FOOTER */
 footer {
