--- a/CSS/style.css
+++ b/CSS/style.css
@@ -639,6 +639,9 @@ textarea {
   flex-direction: column;
 }
 /* SOCIOS DATOS PERSONALES */
+.desktop_3_form {
+  display: block;
+}
 #datos_personales {
   display: flex;
   flex-direction: column;
@@ -710,7 +713,7 @@ textarea {
 #disponibilidad input:checked::after,
 #datos_de_contacto input:checked::after,
 #contribucion input:checked::after {
-  content: ""; /* Carácter de checkmark Unicode */
+  content: "";
   font-size: 16px;
   width: 100%;
   height: 100%;
@@ -1339,10 +1342,10 @@ textarea {
     height: 450px;
   }
   .desktop_3_form form {
-    width: 20%;
+    width: 25%;
   }
   #disponibilidad {
-    width: 60%;
+    width: 50%;
     justify-content: space-around;
   }
   #disponibilidad div {
